test<user-service>: add basic tests and change some methods POST to PATCH and DELETE
This commit includes the addition of 6 tests to check the userController. Moreover, it changes the update POST endpoint to a PATCH one, more accurate to the purpose and the DELETE to a DELETE with the tag in header instead of a POST
