# epitweet-backend/user-service/src/main/java/com/epita/repository/entity/User.java
@@ -2,10 +2,16 @@ package com.epita.repository.entity;
 
 import com.epita.controller.contracts.UserRequest;
 import io.quarkus.mongodb.panache.common.MongoEntity;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 import org.bson.types.ObjectId;
 
+import java.util.ArrayList;
 import java.util.List;
 
+@NoArgsConstructor
+@AllArgsConstructor
 @MongoEntity(collection="Users")
 public class User {
     public ObjectId _id;
@@ -16,6 +22,6 @@ public class User {
     public User(UserRequest userRequest) {
         this.tag = userRequest.getTag();
         this.pseudo = userRequest.getPseudo();
-        this.blockedUsers = userRequest.getBlockedUsers();
+        this.blockedUsers = userRequest.getBlockedUsers() != null ? userRequest.getBlockedUsers() : new ArrayList<>();
     }
 }
